--- a/index.html
+++ b/index.html
@@ -1,62 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="style2.css?v=1.2" />
     <title>Cardápio Digital</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <div class="container-fluid">
-        <div class="row justify-content-center text-align">
-            <img src="./img/logo.png" class="logo">
+      <div class="row justify-content-center">
+        <img src="./img/logo.png" class="logo" />
+      </div>
+<hr color="white">
+      <div class="row justify-content-center m-5">
+      <h1 class="display-2 mt-3">DELICIOSOS LANCHES</h1>
+    </div>
+
+      <article class="lista">
+      <div class="row menu justify-content-center">
+        <div class="col-sm-6 col-xl-4 exibProd m-3">
+          <img src="./img/ham.png" alt="hamburguer"/>
+          <h2>HAMBÚRGUER</h2>
+          <p>Pão delicinh, baicon e cheddar</p>
+          <span class="price">R$ 30,99</span><br>
+          <button class="btn btn-success m-2 pedir" data-id="x-bacon cheddar">ADICIONAR À LISTA</button>
         </div>
+        <div class="col-sm-6 col-xl-4 exibProd m-3">
+          <img src="./img/ham2.png" alt="hamburguer" />
+          <h2>HAMBÚRGUER</h2>
+          <p>Pão delicinha, hamburguer 150g, tomate e alface</p>
+          <span class="price">R$ 30,99</span><br>
+          <button class="btn btn-success m-2 pedir" data-id="x-burguer">ADICIONAR À LISTA</button>
+        </div>
+          <div class="col-sm-6 col-xl-4 exibProd m-3">
+            <img src="./img/pizza.png" alt="hamburguer" />
+            <h2>HAMBÚRGUER ACHATADO</h2>
+            <p>Massa delicinha, queijo e calabresa</p>
+            <span class="price">R$ 30,99</span><br>
+            <button class="btn btn-success m-2 pedir" data-id="hamburguer achatado">ADICIONAR À LISTA</button>
+          </div>
+          <div class="col-sm-6 col-xl-4 exibProd m-3">
+            <img src="./img/pastel.png" alt="hamburguer" />
+            <h2>HAMBÚRGUER CROCANTE</h2>
+            <p>Massa bem crocrante, e queijo de qualidade</p>
+            <span class="price">R$ 30,99</span><br>
+            <button class="btn btn-success m-2 pedir" data-id="hamburguer crocante">ADICIONAR À LISTA</button>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-12">
+          <a href="" class="btn btn-success" id="meuPedido" target="_blank">CONFIRMAR PEDIDO</a>
+        </div>
+      </div>
+    </article>
+    </div>
 
-        .cool
-        <section class="menu">
-            <div class="menu-item">
-                <img src="./img/hamburguer.png" al="hamburguer">
-                <h2>hambúrguer</h2>
-                <p>Pão delicinha, hamburguer 150g, tomate e alface</p>
-                <span class="price">R$ 30,99</span>
-            </div>
-            <div class="menu-item"></div>
-            <img src="./img/hamburguer.png" al="hamburguer">
-            <h2>hambúrguer</h2>
-            <p>Pão delicinha, hamburguer 150g, tomate e alface</p>
-            <span class="price">R$ 30,99</span>
-    </div>
-    </div>
-    <div class="menu-item">
-        <img src="hamburguer" alt="hamburguer">
-        <h2>hambúrguer</h2>
-        <p>Pão delicinha, hamburguer 150g, tomate e alface</p>
-        <span class="price">R$ 30,99</span>
-    </div>
-    <div class="menu-item">
-        <img src="hamburguer" alt="hamburguer">
-        <h2>hambúrguer</h2>
-        <p>Pão delicinha, hamburguer 150g, tomate e alface</p>
-        <span class="price">R$ 30,99</span>
-    </div>
-    </section>
-    </div>
-    </div>
 
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    >
+</script>
+    <script src="script.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
-</body>
-
+  </body>
 </html>
